--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "node-cache": "^5.1.2",
+    "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
+    "puppeteer": "^24.31.0",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
