--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ DB_HOST=localhost
 DB_PORT=5432
 PORT=3000
 OCR=apiKey
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=universidadindependencia@gmail.com
+SMTP_PASS=aygy fuex fyky ttwa
